--- a/templates/plannerdly.html
+++ b/templates/plannerdly.html
@@ -32,7 +32,7 @@
             /*font-size: 90px;*/
             /*}*/
         h2 {
-        font-family: 'Monoton';
+        font-family: Fredericka the Great;
         font-size: 50px;
         }
         table {
@@ -74,24 +74,51 @@
             text-align: center;
         }
 
-
         h1 {
-            font-family: 'Monoton', sans-serif;
-            font-size: 4em;
+            font-family: Forum;
+            font-size: 90px;
             color: #000;
         }
 
+        input.text {
+            font-family: Raleway;
+            border: 0;
+        }
 
+        input::placeholder {
+            color: gray;
+            padding-left: 10px;
+            font-size: small;
+            font-family: Raleway;
+        }
         button {
-            cursor: pointer;
-            margin: 0 5px;
-            padding: 10px 30px;
-            background: transparent;
-            border: 1px solid #ccc;
-            border-radius: 8px;
-            outline: 0;
-            color: #000;
-            transition: all ease 300ms;
+            margin-top: 5px;
+            font-family: Raleway;
+            padding: 6px 14px;
+            border-radius: 6px;
+            color: #3D3D3D;
+            background: #fff;
+            border: 1px solid black;
+            box-shadow: 0px 0.5px 1px rgba(0, 0, 0, 0.1);
+            user-select: none;
+            -webkit-user-select: none;
+            touch-action: manipulation;
+            transition-deration: 0.4s;
+        }
+        button.taskdaily {
+            margin-top: 5px;
+            margin-bottom: 20px;
+            font-family: Raleway;
+            padding: 6px 14px;
+            border-radius: 6px;
+            color: #3D3D3D;
+            background: #fff;
+            border: 1px solid white;
+            box-shadow: 0px 0.5px 1px rgba(0, 0, 0, 0.1);
+            user-select: none;
+            -webkit-user-select: none;
+            touch-action: manipulation;
+            transition-deration: 0.4s;
         }
         button:hover {
             color: #333;
@@ -135,12 +162,12 @@
         </tr>
         <tr>
             {% for i in range(0, 2) %}
-            <td id="cell.{{i}}">
-                <ol id="show_input.{{i}}">
+            <td id="celldaily.{{i}}">
+                <ol id="show_inputdaily.{{i}}">
                 </ol>
-                <input placeholder="Task" type="text" class="text" id="task.{{i}}">
-                <button class="btn btn-outline-secondary" id="add_task.{{i}}" onclick="display('{{i}}')">Add Task</button>
-                <button class="btn btn-outline-secondary" onclick="remove('{{i}}')">Clear Task(s)</button>
+                <input placeholder="Task" class="text" class="text" id="taskdaily.{{i}}">
+                <button class="taskdaily" id="add_taskdaily.{{i}}" onclick="display('{{i}}')">Add Task</button>
+                <button class="taskdaily" onclick="remove('{{i}}')">Clear Task(s)</button>
             </td>
             {% endfor %}
         </tr>
@@ -150,7 +177,7 @@
 
 <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
 
-<div class="table">
+<div class="table" style="font-family: Raleway">
     <div class="cell">
         <h2 id="clock" class="clock"></h2>
 
@@ -161,25 +188,23 @@
             <option value="AM">AM</option>
             <option value="PM">PM</option>
         </select>
-
-        <p>
-            <button id="startstop">Set Alarm</button>
-        </p>
+        <br>
+        <button style="margin-top: 10px;" id="startstop">Set Alarm</button>
     </div>
 </div>
 <body/>
 
     <script>
 
-        // converting string (task input) to hex
+        // converting string (taskdaily input) to hex
         function conversion(i) {
-            const task = "task." + i;
-            const show_input = "show_input." + i;
-            const tasks_text = show_input + ".text"
-            // localStorage.setItem(task, document.getElementById(task).value);
-            localStorage.setItem(tasks_text, document.getElementById(show_input).innerText)
-            let text = localStorage.getItem(tasks_text);
-            let short = text.slice(-4) // takes last 4 characters of the task list
+            const taskdaily = "taskdaily." + i;
+            const show_inputdaily = "show_inputdaily." + i;
+            const taskdailys_text = show_inputdaily + ".text"
+            // localStorage.setItem(taskdaily, document.getElementById(taskdaily).value);
+            localStorage.setItem(taskdailys_text, document.getElementById(show_inputdaily).innerText)
+            let text = localStorage.getItem(taskdailys_text);
+            let short = text.slice(-4) // takes last 4 characters of the taskdaily list
             let arr1 = [];
             for (let n = 0, l = short.length; n < l; n ++)
             {
@@ -197,37 +222,27 @@
         }
 
 
-        // displaying user input for their tasks
+        // displaying user input for their taskdailys
         function display(i) {
-            let task = "task." + i;
-            // let task2 = "task." + id;
-            const show_input = "show_input." + i;
+            let taskdaily = "taskdaily." + i;
+            // let taskdaily2 = "taskdaily." + id;
+            const show_inputdaily = "show_inputdaily." + i;
             const cell = "cell." + i;
-            localStorage.setItem(task, document.getElementById(task).value); // stores value in session
-            const TASK = localStorage.getItem(task); // a new variable for the list
+            localStorage.setItem(taskdaily, document.getElementById(taskdaily).value); // stores value in session
+            const TASK = localStorage.getItem(taskdaily); // a new variable for the list
             const list = document.createElement('list');
             list.innerHTML = "<li>" + TASK + "</li>"; // list
-            document.getElementById(show_input).appendChild(list); // adding to list
-            localStorage.setItem(show_input, document.getElementById(show_input).innerHTML)
+            document.getElementById(show_inputdaily).appendChild(list); // adding to list
+            localStorage.setItem(show_inputdaily, document.getElementById(show_inputdaily).innerHTML)
 
-            // whether or not checkbox is toggled, and uses color based on result
-
-            let checked = document.getElementById("color").checked;
-            if ( checked ) {
-                colorChange(i);
-                localStorage.setItem("checkbox", "true");
-            } else {
-                document.getElementById(cell).style.backgroundColor = null;
-                localStorage.setItem("checkbox", "false");
-            }
-            document.getElementById(task).value = null; // clears input box, QOL update
+            document.getElementById(taskdaily).value = null; // clears input box, QOL update
         }
 
         // enter key
         for (let i = 0; i < 2; i++) {
-            const task = "task." + i;
-            const button = "add_task." + i;
-            document.getElementById(task)
+            const taskdaily = "taskdaily." + i;
+            const button = "add_taskdaily." + i;
+            document.getElementById(taskdaily)
                 .addEventListener("keyup", function (event) {
                     event.preventDefault();
                     if (event.keyCode === 13) { // maybe it's deprecated, but it works
@@ -236,39 +251,28 @@
                 });
         }
 
-        // checks stored web memory for tasks from a prev. sessionalar
+        // checks stored web memory for taskdailys from a prev. sessionalar
         function check() {
             for (let i = 0; i < 2; i++) {
-                const task = "task." + i;
-                const show_input = "show_input." + i;
-                const cell = "cell." + i;
-                if (typeof localStorage.getItem(task) !== null) {
-                    // let tasks = "'" + str + "'".split(" "); // I really thought I needed the text...
-                    document.getElementById(show_input).innerHTML = localStorage.getItem(show_input);
-                    // alert(str.match(/.*?[\.\s]+?/g)) // nah bruh
-                }
-                // let cellColor = cell + "." + "color";
-                // if ( typeof localStorage.getItem(cellColor) !== "#" ) {
-                //     colorChange(i)
-                // }
-                // let checked = document.getElementById("color").checked
-                if (localStorage.getItem("checkbox")) {
-                    document.getElementById("color").checked = true
-                    colorChange(i)
+                const taskdaily = "taskdaily." + i;
+                const show_inputdaily = "show_inputdaily." + i;
+                const celldaily = "celldaily." + i;
+                if (typeof localStorage.getItem(taskdaily) !== null) {
+                    document.getElementById(show_inputdaily).innerHTML = localStorage.getItem(show_inputdaily);
                 }
             }
         }
 
-        // clears task list and web storage
+        // clears taskdaily list and web storage
         function remove(i) {
-            const task = "task." + i;
-            const show_input = "show_input." + i;
+            const taskdaily = "taskdaily." + i;
+            const show_inputdaily = "show_inputdaily." + i;
             let cell = "cell." + i;
             // clearing web storage
-            localStorage.removeItem(task);
-            localStorage.removeItem(show_input);
+            localStorage.removeItem(taskdaily);
+            localStorage.removeItem(show_inputdaily);
             // clearing cell text
-            document.getElementById(show_input).innerHTML = null;
+            document.getElementById(show_inputdaily).innerHTML = null;
             if ( typeof document.getElementById(cell).style.backgroundColor !== null ) { // checking for color
                 document.getElementById(cell).style.backgroundColor = null // removing color
             }
@@ -279,7 +283,7 @@
         var time, alarm, currentH, currentM,
             activeAlarm = false,
             //had to get a website mp3 format using https://sndup.net/. Here is the alarm in this format https://sndup.net/29dz. Then, I copied the link over.
-            sound = new Audio("https://cdn.sndup.net/29dz/wakeup+%281%29.mp3?token=v9T0OXHU1z0n2gjw3emT5mx8kjEQ_U5b0FI7-zRe0bA&token_path=%2F29dz%2F&expires=1635999805");
+            sound = new Audio("https://cdn.sndup.net/29dz/wakeup+%281%29.mp3?token=2VIGlaI7P5q4Y5Cw7YZO0dGE6zTXmm1eAstR_UdtmDU&token_path=%2F29dz%2F&expires=1636084686");
         //needed to repeat sound until stop button is clicked
         sound.loop = true;
 
