--- a/templates/nasty.html
+++ b/templates/nasty.html
@@ -67,7 +67,7 @@
                 <a href="http://127.0.0.1:5000/anirudh"><img src="/static/assets/anirudhprofile.jpg" alt="Anirudh's picture" style="width: 200px; height: 200px; object-fit: cover "></a>
             </div>
             <div class="col align-self-start">
-                <a href="http://127.0.0.1:5000/james"><img src="/static/assets/jamesprofile.jfif" alt="James's picture" style="width: 200px; height: 200px; object-fit:cover"></a>
+                <a href="http://127.0.0.1:5000/james"><img src="/static/assets/sahilprofile.jfif" alt="Sahil's picture" style="width: 200px; height: 200px; object-fit:cover"></a>
             </div>
         </div>
         <div class="row justify-content-center" style="text-align: center">
@@ -81,7 +81,7 @@
                 <a class="name" style="color:white" href="http://127.0.0.1:5000/anirudh"> Anirudh Ramachandran </a>
             </div>
             <div class="col align-self-start">
-                <a class="name" style="color:white" href="http://127.0.0.1:5000/james"> James Lee </a>
+                <a class="name" style="color:white" href="http://127.0.0.1:5000/sahil"> Sahil Samar </a>
             </div>
         </div>
     </div>
