--- a/templates/sahil.html
+++ b/templates/sahil.html
@@ -1,4 +1,4 @@
-{% extends "layouts/base.html" %}
+{% extends "layouts/layout.html" %}
 
 <!- This variable sets name of browser tab  -->
 {% set project = "Sahil" %}
