--- a/templates/anirudh.html
+++ b/templates/anirudh.html
@@ -1,5 +1,5 @@
 <!-- Extending the predefined project layout -->
-{% extends "layouts/base.html" %}
+{% extends "layouts/layout.html" %}
 
 <!- This variable sets name of browser tab  -->
 {% set project = "Anirudh" %}
