Added Mask on/mask off to about page

--- a/templates/nasty.html
+++ b/templates/nasty.html
@@ -81,7 +81,7 @@
                 <a class="name" style="color:white" href="http://127.0.0.1:5000/anirudh"> Anirudh Ramachandran </a>
             </div>
             <div class="col align-self-start">
-                <a class="name" style="color:white" href="http://127.0.0.1:5000/james"> James Lee </a>
+                <a class="name" style="color:white" href="http://127.0.0.1:5000/james"> Sahil Samar </a>
             </div>
         </div>
     </div>
