--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -49,6 +49,17 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
                     <a class="dropdown-item" href="http://127.0.0.1:5000/weatherapi2">Weather</a>
                 </div>
             </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    About Page
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <a class="dropdown-item" href="http://127.0.0.1:5000/ethan">Ethan</a>
+                    <a class="dropdown-item" href="http://127.0.0.1:5000/anirudh">Anirudh</a>
+                    <a class="dropdown-item" href="http://127.0.0.1:5000/michael">Michael</a>
+                    <a class="dropdown-item" href="http://127.0.0.1:5000/sahilabout">Sahil</a>
+                </div>
+            </li>
         </ul>
     </div>
 </nav>
