--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -57,7 +57,7 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
                     <a class="dropdown-item" href="http://127.0.0.1:5000/ethan">Ethan</a>
                     <a class="dropdown-item" href="http://127.0.0.1:5000/anirudh">Anirudh</a>
                     <a class="dropdown-item" href="http://127.0.0.1:5000/michael">Michael</a>
-                    <a class="dropdown-item" href="http://127.0.0.1:5000/sahilabout">Sahil</a>
+                    <a class="dropdown-item" href="http://127.0.0.1:5000/sahil">Sahil</a>
                 </div>
             </li>
         </ul>
