More cleaning house

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 <!-- Extending the project layout, as this file will do minor customizations -->
-{% extends "layouts/layout.html" %}
+{% extends "layouts/base.html" %}
 
 {% block background %}
     <html>
