--- a/templates/nasty.html
+++ b/templates/nasty.html
@@ -1,5 +1,5 @@
 <!- This variable sets name of browser tab  -->
-{% extends "layouts/layout.html" %}
+{% extends "layouts/base.html" %}
 
 {% block background %}
     <body style="background-color:cadetblue;">  </body>
