--- a/templates/anirudh.html
+++ b/templates/anirudh.html
@@ -16,17 +16,11 @@
     </div>
     <div class="center-block" style="margin: 2% 5% 5%; text-align:left; font-family: Raleway,serif;">
 
-            <p style="font-family:'Raleway'; font-size:100px" > Hello, {{name}}!</p>
-            <form action="{{ url_for('anirudh') }}" id="greet" method="POST" >
-                <label for="name">Type a greeting name</label>
-                <input name="name" id="name">
-                <input type="submit" value="Greetings!">
-            </form>
+
 
     </div>
-    <div class="col-12">
-        <img class="img-responsive py-3" id="picture" src="{{ imgMaskOff }}" alt="" width="65" height="Auto">
-        <button type="button" id="butt" onclick="MaskOnMaskoff('{{i}}')">{{ msgTurnOn }}</button>
+    <div class="col-12" style="text-align:center">
+        <img class="img-responsive py-3" id="picture" src="{{ imgMaskOff }}" alt="" width="200" height="250" onclick="MaskOnMaskoff('{{i}}')">
     </div>
     <script>
         function MaskOnMaskoff() {
@@ -45,9 +39,9 @@
 
 {% block background %}
     <script src="{{ url_for('static', filename='three.r119.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='vanta.globe.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='vanta.halo.min.js') }}"></script>
     <script>
-        VANTA.GLOBE({
+        VANTA.HALO({
             el: "body",
             mouseControls: true,
             touchControls: true,
