--- a/templates/nasty.html
+++ b/templates/nasty.html
@@ -2,7 +2,7 @@
 {% extends "layouts/base.html" %}
 
 {% block background %}
-    <body style="background-color:cadetblue;">  </body>
+    <body style="background-color: #5B3B8C;">  </body>
 {% endblock %}
 
 {% block body %}
@@ -11,7 +11,7 @@
         h1 {
             font-family: "Bebas Neue";
             text-align: center;
-            font-size:80px
+            font-size:80px;
         }
         h2 {
             font-family: "Bebas Neue";
@@ -19,7 +19,7 @@
             font-size:69px
         }
         html, body {
-            background-color: cadetblue;
+            background-color: #5B3B8C;
         }
         p {
             font-family: "Raleway"
@@ -32,7 +32,7 @@
             display: inline-block;
             border-radius: 100px;
             transition: all .2s;
-            color: antiquewhite;
+            color: lightpink;
             font-size: 20px;
             font-weight: 900;
         }
@@ -87,26 +87,11 @@
     </div>
     <br>
     <br>
-    <h2 class="text-center">PBL</h2>
-    <div class="container">
-        <div class="row justify-content-md-center" style="text-align: center; width: 100%">
-            <div class="col-3">
-                <a href="http://127.0.0.1:5000/plannermnthly" class="btn">Monthly Planner</a>
-            </div>
-            <div class="col-3">
-                <a href="http://127.0.0.1:5000/plannerwkly" class="btn">Weekly Planner</a>
-            </div>
-            <div class="col-3">
-                <a href="http://127.0.0.1:5000/plannerdly" class="btn">Daily Planner</a>
-            </div>
-        </div>
-    </div>
-    <br>
     <h2 class="text-center">Journals</h2>
     <div class="container">
         <div class="row justify-content-md-center" style="text-align: center; width: 100%">
             <div class="col-3">
-                <a href="https://docs.google.com/document/d/1Kcb8k2XW2PODSQW_EKFYb1XKB39VrwB-OEAnCMM7Frs/edit?usp=sharing" target="_blank" class="btn">Michael & James</a>
+                <a href="https://docs.google.com/document/d/1R43f8RuXc5HnxJAlKmvdIIxjIf3VF8rpTDBk7qxklEU/edit?usp=sharing" target="_blank" class="btn">Michael & James</a>
             </div>
             <div class="col-3">
                 <a href="https://docs.google.com/document/d/1-AS5NcpL8dvRFaj1oww0tR8XM1lf20oFSDFuEdq7OxQ/edit?usp=sharing" target="_blank" class="btn">Ethan & Anirudh</a>
@@ -118,7 +103,7 @@
     <div class="container">
         <div class="row justify-content-md-center" style="text-align: center; width: 100%">
             <div class="col">
-                <a href="https://github.com/NastyEthan/NastyReturned" target="_blank" class="btn">REPOSITORY</a>
+                <a href="https://github.com/NastyEthan/NastyAwakened" target="_blank" class="btn">REPOSITORY</a>
             </div>
         </div>
     </div>
