--- a/templates/michael.html
+++ b/templates/michael.html
@@ -31,7 +31,7 @@
     <script>
         function mask() {
             var value = document.getElementById("mask_img").alt
-            if ( value == "michael_mask" ) {
+            if ( value === "michael_mask" ) {
                 document.getElementById("mask_img").src = "/static/assets/michaelimages/michael_nomask.jpg"
                 document.getElementById("mask_img").alt = "michael_nomask"
             } else {
