api progress for ethan

--- a/templates/ethan.html
+++ b/templates/ethan.html
@@ -52,4 +52,19 @@
             }
         }
     </script>
+
+    <table>
+        <tr>
+            <th>
+                <label for="name">Enter word:</label>
+                <input name="word" id="word">
+            </th>
+        </tr>
+        <tr>
+            <th>
+                {{mydef['word']['definition']}}
+            </th>
+        </tr>
+    </table>
+
 {% endblock %}
