--- a/templates/nasty.html
+++ b/templates/nasty.html
@@ -69,6 +69,9 @@
             <div class="col align-self-start">
                 <a href="http://127.0.0.1:5000/sahil"><img src="/static/assets/sahilimages/sahilnomask.JPG" alt="Sahil's picture" style="width: 200px; height: 200px; object-fit:cover"></a>
             </div>
+            <div class="col align-self-start">
+                <a href=""><img src="" alt="Byron's picture" style="width: 200px; height: 200px; object-fit:cover"></a>
+            </div>
         </div>
         <div class="row justify-content-center" style="text-align: center">
             <div class="col align-self-start">
@@ -82,6 +85,9 @@
             </div>
             <div class="col align-self-start">
                 <a class="name" style="color:white" href="http://127.0.0.1:5000/sahil"> Sahil Samar </a>
+            </div>
+            <div class="col align-self-start">
+                <a class="name" style="color:white" href=""> Byron Lu </a>
             </div>
         </div>
     </div>
