Imported JSON data for API

--- a/templates/sahil.html
+++ b/templates/sahil.html
@@ -46,6 +46,18 @@
     <div style="text-align:center">
         <a href="{{ journal }}" class="btn">Sahil's Journal</a>
     </div>
+    <table>
+        <tr>
+            <th>
+                Hotels
+            </th>
+        </tr>
+        <tr>
+            <th>
+                {{myHotel}}
+            </th>
+        </tr>
+    </table>
     <script>
         function toggleMask() {
             const image = document.getElementById('picture');
