added link to journal

--- a/templates/anirudh.html
+++ b/templates/anirudh.html
@@ -8,6 +8,7 @@
 {% set msgTurnOn = "Mask On" %}
 {% set msgTurnOff = "Mask Off" %}
 {% set repo = "https://github.com/NastyEthan/NastyAwakened" %}
+{% set journal = "https://docs.google.com/document/d/1-AS5NcpL8dvRFaj1oww0tR8XM1lf20oFSDFuEdq7OxQ/edit" %}
 
 
 {% block body %}
@@ -22,6 +23,9 @@
         }
 
     </style>
+        <div style="text-align:center">
+            <a style="color: white;" href="{{ journal }}" class="btn">Anirudh's Journal</a>
+        </div>
         <table>
             <tr>
                 <th>
