changes to ethan.html, main.py, nasty.html
ethan.html: added background, added definition api
main.py:removed greetbox in exchange for definition api
nasty.html: fixed journal link and Anirudh link

things to work on: nasty.html wrap overflow, ethan.html change text color

--- a/templates/nasty.html
+++ b/templates/nasty.html
@@ -94,7 +94,7 @@
             <a class="name" style="color:white" href="http://127.0.0.1:5000/ethan">  Ethan Vo </a>
         </div>
         <div>
-            <a class="name" style="color:white" href="http://127.0.0.1:5000/anirudh"> Anirudhfix  </a>
+            <a class="name" style="color:white" href="http://127.0.0.1:5000/anirudh"> Anirudh </a>
             <br>
             <a class="name" style="color:white" href="http://127.0.0.1:5000/anirudh"> Ramachandran </a>
         </div>
@@ -113,7 +113,7 @@
     <div class="container">
         <div class="row justify-content-md-center" style="text-align: center; width: 100%">
             <div class="col-3">
-                <a href="https://docs.google.com/document/d/1R43f8RuXc5HnxJAlKmvdIIxjIf3VF8rpTDBk7qxklEU/edit?usp=sharing" target="_blank" class="btn">Michael & James</a>
+                <a href="https://docs.google.com/document/d/1R43f8RuXc5HnxJAlKmvdIIxjIf3VF8rpTDBk7qxklEU/edit?usp=sharing" target="_blank" class="btn">Michael, Sahil & Byron</a>
             </div>
             <div class="col-3">
                 <a href="https://docs.google.com/document/d/1-AS5NcpL8dvRFaj1oww0tR8XM1lf20oFSDFuEdq7OxQ/edit?usp=sharing" target="_blank" class="btn">Ethan & Anirudh</a>
