--- a/templates/ethan.html
+++ b/templates/ethan.html
@@ -29,7 +29,7 @@
         }
     </style>
 
-    <div class="center-block" style="margin: 2% 5% 5%; text-align:left; font-weight: 900; font-size:20px; color: antiquewhite">
+    <div class="center-block" style="margin: 2% 5% 5%; text-align:left; font-weight: 900; font-size:20px; color: black">
         <p>Word: {{ word }}</p>
         <p>Definition: {{mydef}}</p>
         <form action="{{ url_for('ethan') }}" id="define" method="POST" >
