--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -7,10 +7,7 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
 <!DOCTYPE HTML>
 <html lang="en">
 
-{% set basename = "Nighthawk Coding" %}
-{% set github = "https://github.com/nighthawkcoders" %}
-{% set twitter = "https://twitter.com/NighthawkCoding" %}
-{% set youtube = "https://www.youtube.com/channel/UClIKOsDS5dsfzFA3zveDT3Q?view_as=subscriber" %}
+{% set basename = "NastyAwakened" %}
 
 <head>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -49,6 +46,7 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
         }
 
         .dark-mode {
+            background-color: var(--white);
             background-color: var(--white);
             color: var(--black);
         }
