--- a/templates/michael.html
+++ b/templates/michael.html
@@ -1,7 +1,7 @@
 <!-- Extending the predefined project layout -->
 {% extends "layouts/base.html" %}
 
-<!- This variable sets name of browser tab  -->
+<!-- This variable sets name of browser tab  -->
 {% set project = "Michael" %}
 
 {% block body %}
