--- a/templates/sahil.html
+++ b/templates/sahil.html
@@ -13,6 +13,8 @@
             background-repeat: no-repeat;
             background-attachment: fixed;
             background-size: 100% 100%;
+            min-height: 100%;
+            height: fit-content;
         }
         .btn:link,
         .btn:visited {
@@ -46,16 +48,30 @@
     <div style="text-align:center">
         <a href="{{ journal }}" class="btn">Sahil's Journal</a>
     </div>
+    <form action="{{ url_for('sahil') }}" id="define" method="POST" >
+        <label for="city">Find a city:</label>
+        <input name="city" id="city">
+        <input type="submit" value="Find a hotel">
+    </form>
     <table>
         <tr>
-            <th>
-                Hotels
-            </th>
+            <td>Name: </td>
+            <td>{{myHotel['name']}}</td>
         </tr>
         <tr>
-            <th>
-                {{myHotel}}
-            </th>
+            <td>Link: </td>
+            <td>{{myHotel['link']}}</td>
+        </tr>
+        <tr>
+            <td>Rating: </td>
+            <td>{{myHotel['rating']}}</td>
+
+        </tr>
+    </table>
+    <table>
+        <tr>
+            <td>Activity: </td>
+            <td>{{ activity }}</td>
         </tr>
     </table>
     <script>
@@ -67,6 +83,10 @@
                 image.src = "{{ imgMaskOn }}";
             }
         }
+
+{#        fetch('https://www.boredapi.com/api/activity')
+            .then(res => res.json())
+            .then(data => console.log(data))#}
     </script>
 {% endblock %}
 
