--- a/templates/ethan.html
+++ b/templates/ethan.html
@@ -35,6 +35,7 @@
             <img id="mask_img" style="width: 20%; height: 20%" onclick="mask()" src="/static/assets/ethanimages/maskedvo.png" alt="maskedvo">
         </form>
         <br>
+        <a href="https://github.com/NastyEthan/NastyAwakened/commits?author=NastyEthan" target="_blank" class="btn">COMMITS</a>
     </div>
 
     <script>
