--- a/templates/nasty.html
+++ b/templates/nasty.html
@@ -77,7 +77,7 @@
             <a href={{ url_for('michael') }}><img src="/static/assets/profileimages/michaelprofile.jpg" alt="Michael's picture" style="width: 200px; height: 200px; object-fit: cover" ></a>
         </div>
         <div>
-            <a href={{ url_for('ethan') }}"><img src="/static/assets/profileimages/ethanprofile.jpg" alt="Ethan's picture" style="width: 200px; height: 200px; object-fit: cover"></a>
+            <a href={{ url_for('ethan') }}><img src="/static/assets/profileimages/ethanprofile.jpg" alt="Ethan's picture" style="width: 200px; height: 200px; object-fit: cover"></a>
         </div>
         <div>
             <a href={{ url_for('anirudh') }}><img src="/static/assets/profileimages/anirudhprofile.jpg" alt="Anirudh's picture" style="width: 200px; height: 200px; object-fit: cover "></a>
